[gd_scene load_steps=9 format=3 uid="uid://b6ypm265h0rdh"]

[ext_resource type="PackedScene" uid="uid://beht6xdn5av18" path="res://player.tscn" id="1_brbnu"]
[ext_resource type="Script" path="res://level.gd" id="1_w1e24"]
[ext_resource type="Script" path="res://enemy.gd" id="2_4i1dp"]
[ext_resource type="PackedScene" uid="uid://dyntsh5sct8qo" path="res://ball.tscn" id="2_p3j8c"]
[ext_resource type="FontFile" uid="uid://cak3cbqesnl3u" path="res://poxel-font.ttf" id="5_vfu6y"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w1hxq"]
size = Vector2(1920, 50)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r4u6y"]
size = Vector2(50, 1080)

[sub_resource type="FontVariation" id="FontVariation_twv8g"]
base_font = ExtResource("5_vfu6y")

[node name="Level" type="Node2D"]
script = ExtResource("1_w1e24")

[node name="ParedSuperior" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ParedSuperior"]
position = Vector2(960, -25)
shape = SubResource("RectangleShape2D_w1hxq")

[node name="ParedInferior" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ParedInferior"]
position = Vector2(960, 1105)
shape = SubResource("RectangleShape2D_w1hxq")

[node name="ArcoIzquierdo" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ArcoIzquierdo"]
position = Vector2(-25, 540)
shape = SubResource("RectangleShape2D_r4u6y")

[node name="ArcoDerecho" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ArcoDerecho"]
position = Vector2(1945, 540)
shape = SubResource("RectangleShape2D_r4u6y")

[node name="Player" parent="." instance=ExtResource("1_brbnu")]
position = Vector2(50, 460)

[node name="Enemy" parent="." instance=ExtResource("1_brbnu")]
position = Vector2(1845, 460)
script = ExtResource("2_4i1dp")

[node name="Ball" parent="." instance=ExtResource("2_p3j8c")]
position = Vector2(960, 539.78)

[node name="PlayerScore" type="Label" parent="."]
offset_left = 547.0
offset_top = 157.0
offset_right = 654.0
offset_bottom = 339.0
theme_override_fonts/font = SubResource("FontVariation_twv8g")
theme_override_font_sizes/font_size = 160

[node name="EnemyScore" type="Label" parent="."]
offset_left = 1257.0
offset_top = 165.0
offset_right = 1364.0
offset_bottom = 347.0
theme_override_fonts/font = SubResource("FontVariation_twv8g")
theme_override_font_sizes/font_size = 160

[node name="RestartTimer" type="Timer" parent="."]

[connection signal="body_entered" from="ArcoIzquierdo" to="." method="_on_arco_izquierdo_body_entered"]
[connection signal="body_entered" from="ArcoDerecho" to="." method="_on_arco_derecho_body_entered"]
[connection signal="timeout" from="RestartTimer" to="Ball" method="_on_restart_timer_timeout"]
